working train and evaluate code

--- a/ET-Tox/test_models.ipynb
+++ b/ET-Tox/test_models.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "36f30629-77ed-42ee-be58-aa761e3cc3f9",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO] Loaded preprocessed MMAP dataset from ./data/MoleculeNet/processed\n",
-      "loading model\n"
+      "/home/zznie/miniforge3/envs/et_tox/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -121,43 +121,259 @@
     "    #import pdb; pdb.set_trace()\n",
     "    if final_test:\n",
     "        return auc_dict, sum(auc) / len(auc)\n",
-    "    return sum(auc) / len(auc)\n",
-    "\n",
-    "dataset_name = \"tox21\"\n",
-    "\n",
-    "model_path = f\"./output_dir/{dataset_name}.ckpt\"\n",
-    "\n",
-    "# dataset = \"TDCTox\"\n",
-    "# dataset_arg = {\"num_conformers\": 1, \"conformer\": \"best\", \"dataset\": dataset_name}\n",
-    "# dataset_root = \"./data/TDCTox\"\n",
-    "# dataset_split = \"scaffold\"\n",
-    "# splits_path = f\"./data/TDCTox/splits/{dataset_name}_split_1_scaffold.npz\"\n",
-    "\n",
-    "dataset = \"MoleculeNet\"\n",
-    "dataset_arg = {\"num_conformers\": 1, \"conformer\": \"best\", \"data_version\": \"geom\", \"dataset\": dataset_name}\n",
-    "dataset_root = \"./data/MoleculeNet\"\n",
-    "dataset_split = \"scaffold\"\n",
-    "splits_path = f\"./data/MoleculeNet/splits/{dataset_name}_split_1.npz\"\n",
-    "\n",
-    "\n",
-    "data = getattr(datasets, dataset)(dataset_root, **dataset_arg)\n",
-    "\n",
-    "splits = np.load(splits_path)\n",
-    "data = DataLoader(torch.utils.data.Subset(data, splits[\"idx_test\"]), batch_size=1, num_workers=6)\n",
-    "\n",
-    "# load model\n",
-    "print(\"loading model\")\n",
-    "device = \"cuda:0\"\n",
-    "\n",
-    "model = load_model(model_path, device=device).eval()\n",
-    "\n",
-    "\n",
-    "\n"
+    "    return sum(auc) / len(auc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
+   "id": "06edb784",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] Loaded preprocessed MMAP dataset from ./data/MoleculeNet/processed\n",
+      "loading model\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 195/195 [00:08<00:00, 21.67it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " The ROC-AUC is: 0.9358028769493103\n",
+      "\n",
+      "\n",
+      " The PR-AUC is: 0.9828992486000061\n",
+      "\n",
+      "\n",
+      " The null model is: 0.5\n",
+      "\n",
+      "\n",
+      " The PR null model is: 0.8051282167434692\n",
+      "\n",
+      "[INFO] Loaded preprocessed MMAP dataset from ./data/MoleculeNet/processed\n",
+      "loading model\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 195/195 [00:08<00:00, 21.74it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " The ROC-AUC is: 0.8597037196159363\n",
+      "\n",
+      "\n",
+      " The PR-AUC is: 0.9449462890625\n",
+      "\n",
+      "\n",
+      " The null model is: 0.5\n",
+      "\n",
+      "\n",
+      " The PR null model is: 0.7692307829856873\n",
+      "\n",
+      "[INFO] Loaded preprocessed MMAP dataset from ./data/MoleculeNet/processed\n",
+      "loading model\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 195/195 [00:08<00:00, 22.31it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " The ROC-AUC is: 0.8924681544303894\n",
+      "\n",
+      "\n",
+      " The PR-AUC is: 0.9632769823074341\n",
+      "\n",
+      "\n",
+      " The null model is: 0.5\n",
+      "\n",
+      "\n",
+      " The PR null model is: 0.7846153974533081\n",
+      "\n",
+      "[INFO] Loaded preprocessed MMAP dataset from ./data/MoleculeNet/processed\n",
+      "loading model\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 195/195 [00:09<00:00, 19.66it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " The ROC-AUC is: 0.8774480819702148\n",
+      "\n",
+      "\n",
+      " The PR-AUC is: 0.9550771117210388\n",
+      "\n",
+      "\n",
+      " The null model is: 0.5\n",
+      "\n",
+      "\n",
+      " The PR null model is: 0.7794871926307678\n",
+      "\n",
+      "[INFO] Loaded preprocessed MMAP dataset from ./data/MoleculeNet/processed\n",
+      "loading model\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 195/195 [00:09<00:00, 21.43it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " The ROC-AUC is: 0.9271725416183472\n",
+      "\n",
+      "\n",
+      " The PR-AUC is: 0.9752005338668823\n",
+      "\n",
+      "\n",
+      " The null model is: 0.5\n",
+      "\n",
+      "\n",
+      " The PR null model is: 0.7794871926307678\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"bbbp\"\n",
+    "dataset_names = [\"1\", \"42\", \"100\", \"500\", \"1000\"] # [\"1\", \"15\", \"42\", \"100\", \"250\"] # [\"1\", \"42\", \"100\", \"500\", \"1000\"]\n",
+    "output_dir =  \"z_output_dir_model\" # \"z_output_dir_scaffolds/scaffold\"\n",
+    "rocauc_each = []\n",
+    "\n",
+    "for n in dataset_names:\n",
+    "    dataset_name = name + \"-\" + n\n",
+    "    model_path = f\"./{output_dir}/{name}/{dataset_name}.ckpt\"\n",
+    "\n",
+    "    # dataset = \"TDCTox\"\n",
+    "    # dataset_arg = {\"num_conformers\": 1, \"conformer\": \"best\", \"dataset\": name}\n",
+    "    # dataset_root = \"./data/TDCTox\"\n",
+    "    # dataset_split = \"scaffold\"\n",
+    "    # splits_path = f\"./data/TDCTox/splits/{name}_seed{n}_confs1_random.npz\" #f\"./data/TDCTox/splits/{dataset_name}_split_1_scaffold.npz\"\n",
+    "\n",
+    "    dataset = \"MoleculeNet\"\n",
+    "    dataset_arg = {\"num_conformers\": 1, \"conformer\": \"best\", \"data_version\": \"geom\", \"dataset\": name}\n",
+    "    dataset_root = \"./data/MoleculeNet\"\n",
+    "    dataset_split = \"random\"\n",
+    "    splits_path = f\"./data/MoleculeNet/splits/{name}_seed{n}_confs1_random.npz\"\n",
+    "\n",
+    "\n",
+    "    data = getattr(datasets, dataset)(dataset_root, **dataset_arg)\n",
+    "\n",
+    "    splits = np.load(splits_path)\n",
+    "    data = DataLoader(torch.utils.data.Subset(data, splits[\"idx_test\"]), batch_size=1, num_workers=6)\n",
+    "\n",
+    "    # load model\n",
+    "    print(\"loading model\")\n",
+    "    device = \"cuda:0\"\n",
+    "\n",
+    "    model = load_model(model_path, device=device) #.eval()\n",
+    "    labels = []\n",
+    "    preds_test = []\n",
+    "    targets_test = []\n",
+    "    energies = []\n",
+    "\n",
+    "\n",
+    "    for batch in tqdm(data):\n",
+    "        labels.append(batch.tox_labels.numpy())\n",
+    "        targets_test += batch.tox_labels.cpu()\n",
+    "        energies.append(batch.y)\n",
+    "        \n",
+    "        z, pos, batch, Q = batch.z.to(device), batch.pos.to(device), batch.batch.to(device), batch.Q.to(device)\n",
+    "        pred, deriv = model(z, pos, batch, Q=Q)\n",
+    "        preds_test += pred.detach().cpu()\n",
+    "        \n",
+    "    targets = torch.stack(targets_test)\n",
+    "    preds = torch.stack(preds_test)\n",
+    "\n",
+    "    targets = torch.clamp(targets, min=0)\n",
+    "\n",
+    "    if dataset_name == \"ld50\":\n",
+    "        print(f\"The MAE is {l1_loss(preds, targets)}\")\n",
+    "        print(f\"The RMSE is {rmse(preds, targets)}\")\n",
+    "        print(f\"The null-model RMSE is {rmse(torch.tensor([2.54]).repeat_interleave(len(targets)).unsqueeze(1), targets)}\")\n",
+    "    else:\n",
+    "        aucs, mean_auc = multitask_auc(preds, targets.long(), final_test=True)\n",
+    "        aucs_pr, mean_auc_pr = multitask_prauc(preds, targets.long(), final_test=True)\n",
+    "        null_aucs, mean_null_aucs = null_model(preds, targets.long(), final_test=True)\n",
+    "        null_aucs_pr, mean_null_aucs_pr = null_model_pr(preds, targets.long(), final_test=True)\n",
+    "\n",
+    "        print(f\"\\n The ROC-AUC is: {mean_auc}\\n\")\n",
+    "        print(f\"\\n The PR-AUC is: {mean_auc_pr}\\n\")\n",
+    "        print(f\"\\n The null model is: {mean_null_aucs}\\n\")\n",
+    "        print(f\"\\n The PR null model is: {mean_null_aucs_pr}\\n\")\n",
+    "\n",
+    "        rocauc_each.append(mean_auc)\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4e6830c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.8985)\n",
+      "tensor(0.0324)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(torch.mean(torch.stack(rocauc_each)))\n",
+    "print(torch.std(torch.stack(rocauc_each)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "77fe17d7-bc03-45f5-8f58-792fc1eafe56",
    "metadata": {},
    "outputs": [
